k8s/environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuzi-ingress
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer

spec:
  ingressClassName: nginx
  rules:
    - host: local.zuzi.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next
                port:
                  name: http
  tls:
    - hosts:
        - local.zuzi.art
      secretName: k8s-dev-cert
